# EIA-bulk

./: MANIFEST.in  pyproject.toml  readme.md
EIA_bulk.egg-info/: PKG-INFO  SOURCES.txt
eiabulk/: eia_bulk.py
src/: eia_bulk.py
src/route_trees/: short_route_tree.json
